...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/my_statusbar"
        android:contentDescription="@string/sun_toolbar"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/sun_enter_latitude"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
...
        android:textColor="@color/black"
        android:textColorHint="@color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sun_enter_longitude"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/darker_gray"
        android:textColorHint="@color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonLookup"
        app:layout_constraintStart_toEndOf="@+id/editTextLatitude" />

    <Button
        android:id="@+id/buttonLookup"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
...
        android:layout_height="110dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_sunset"
        app:layout_constraintTop_toTopOf="@+id/textViewSolarNoon"
        app:srcCompat="@drawable/ic_dawn" />

    <TextView
        android:id="@+id/textViewSolarNoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:text="@string/sun_solar_noon"
        app:layout_constraintEnd_toEndOf="@+id/image_sun"
        app:layout_constraintStart_toStartOf="@+id/image_sun"
        app:layout_constraintTop_toBottomOf="@+id/image_sun" />

    <TextView
        android:id="@+id/textViewSunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sun_sunrisecolon"
        app:layout_constraintEnd_toEndOf="@+id/image_sundown"
        app:layout_constraintStart_toStartOf="@+id/image_sundown"
        app:layout_constraintTop_toBottomOf="@+id/image_sundown" />

    <TextView
        android:id="@+id/textViewSunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sun_sunriseColon"
        app:layout_constraintEnd_toEndOf="@+id/image_sunset"
        app:layout_constraintStart_toStartOf="@+id/image_sunset"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolarNoon"
        app:layout_constraintVertical_bias="0.585"
        app:srcCompat="@drawable/sun_logo" />

    <Button
        android:id="@+id/btnSaveToFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="28dp"
        android:text="@string/sun_save_to_favorites"
        android:textColor="@color/white"
...
