...
    <string name="rec_OK">OK</string>
    <string name="rec_help">help</string>
    <string name="rec_confirm_delete_title">Delete Recipe</string>
    <string name="rec_confirm_delete_message">Are you sure you want to delete this recipe?</string>
    <string name="rec_delete">Delete</string>
    <string name="rec_cancel">Cancel</string>
    <string name="rec_HelpTtile">Help</string>
    <string name="rec_AboutTitle">About</string>
    <string name="rec_sunIcon_title">SunRise App</string>
    <string name="rec_musicIcon_title">Music App</string>
    <string name="rec_toolbar_dictionary">Dictionary Aoo</string>

<!--    Dict String-->
...

          </string>
    <string name="music_helpTitle" translatable="false">Help</string>

<!--    Sun String-->
    <string name="sun_app_name">Sun</string>
    <string name="sun_open_sunrise_and_sunset_lookup">Open Sunrise and Sunset Lookup</string>
    <string name="sun_latitude">Latitude</string>
    <string name="sun_longitude">Longitude</string>
    <string name="sun_enter_longitude">Enter Longitude</string>
    <string name="sun_enter_latitude">Enter Latitude</string>
    <string name="sun_favorites">Favorites</string>
    <string name="sun_toolbar">SunSearch Menu Bar</string>
    <string name="sun_about">About</string>
    <string name="sun_return_main">Go Back to Home</string>
    <string name="sun_help_dialog_title">How to Use</string>
    <string name="sun_help_dialog_message">
    Instructions:\n
    - Enter the latitude and longitude and click \'Lookup\' to find sunrise and sunset times.\n
...
